Fix(homePage): Switch getting started with how to btn / fix some css issues font size btn and alignement img.

--- a/website/static/css/hompage.css
+++ b/website/static/css/hompage.css
@@ -60,13 +60,17 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  
 }
 
 .homepageCustom .containerBlock .cardBar .cardContent {
   width: 200px;
   height: 160px;
   margin: 44px;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
 }
 
 .homepageCustom .containerBlock .cardBar .cardContent .imageContainer {
@@ -75,9 +79,6 @@
   height: 120px;
 }
 
-.homepageCustom .containerBlock .cardBar .cardContent .imageContainer img {
-  margin-left: 1.8em;
-}
 
 .homepageCustom .containerBlock .cardBar .cardContent .buttonLink {
   background-color: rgb(0, 114, 206);
@@ -89,7 +90,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  font-size: 16px;
+  font-size: 14px;
 }
 
 .homepageCustom .containerBlockPrerequisite {
